--- a/MANAGEMENT/Dashboard/manDash.html
+++ b/MANAGEMENT/Dashboard/manDash.html
@@ -39,10 +39,37 @@
             </div>
                           
             <div class="notification">
+                <span><i class='bx bx-bell icon'></i>Notifications</span>
                 <div class="notifi">
-                    <h2 class="title">Maintainance</h2>
                     <p class="description">Your maintenance request on Decemeber 16, 2024 has been done.</p>
-                    <p class="username">Management</p>
+                    <div class="timestamp">
+                    <span>🕒</span> 24 Nov 2018 at 9:30 AM
+                    </div>
+                </div>
+
+                <div class="notifi">
+                    <p class="description">Your maintenance request on Decemeber 16, 2024 has been done.</p>
+                    <div class="timestamp">
+                    <span>🕒</span> 24 Nov 2018 at 9:30 AM
+                    </div>
+                </div>
+
+                <div class="notifi">
+                    <p class="description">Your maintenance request on Decemeber 16, 2024 has been done.</p>
+                    <div class="timestamp">
+                    <span>🕒</span> 24 Nov 2018 at 9:30 AM
+                    </div>
+                </div>
+
+                <div class="notifi">
+                    <p class="description">Your maintenance request on Decemeber 16, 2024 has been done.</p>
+                    <div class="timestamp">
+                    <span>🕒</span> 24 Nov 2018 at 9:30 AM
+                    </div>
+                </div>
+
+                <div class="notifi">
+                    <p class="description">Your maintenance request on Decemeber 16, 2024 has been done.</p>
                     <div class="timestamp">
                     <span>🕒</span> 24 Nov 2018 at 9:30 AM
                     </div>
@@ -53,23 +80,12 @@
                 <h1>1,000,00.35</h1>
                 <span>Total Sale</span>
             </div>
+
         </div>
 
         <div class="user-notif-main">
             <div class="user">
 
-                <div class="user-card">
-                    <div class="profile">
-                        <img src="../../USER PAGE/image/DP.png" alt="profile">
-                        <div class="name">
-                            <h4>Elmer Rapon</h4>
-                            <span>raponelmer15@gmail.com</span>
-                        </div>
-                    </div>
-                    <div class="div">RM203</div>
-                </div>
-
-                
                 <div class="user-card">
                     <div class="profile">
                         <img src="../../USER PAGE/image/DP.png" alt="profile">
@@ -139,6 +155,22 @@
                         <div class="maintenance-header-item">Maintenance Requested</div>
                         <div class="maintenance-header-item">Details</div>
                         <div class="maintenance-header-item">Status</div>
+                    </div>
+                    <div class="maintenance-table-row">
+                        <div class="maintenance-item">Elmer Rapon</div>
+                        <div class="maintenance-item">RM201</div>
+                        <div class="maintenance-item">October 17, 2024</div>
+                        <div class="maintenance-item">Wall</div>
+                        <div class="maintenance-item">The wall is broken, I need a repair as soon as possible.</div>
+                        <div class="maintenance-item">Pending</div>
+                    </div>
+                    <div class="maintenance-table-row">
+                        <div class="maintenance-item">Elmer Rapon</div>
+                        <div class="maintenance-item">RM201</div>
+                        <div class="maintenance-item">October 17, 2024</div>
+                        <div class="maintenance-item">Wall</div>
+                        <div class="maintenance-item">The wall is broken, I need a repair as soon as possible.</div>
+                        <div class="maintenance-item">Pending</div>
                     </div>
                     <div class="maintenance-table-row">
                         <div class="maintenance-item">Elmer Rapon</div>
