--- a/MANAGEMENT/management.html
+++ b/MANAGEMENT/management.html
@@ -24,14 +24,14 @@
         <!-- Navigation Bar -->
         <nav class="navigator">
             <a href="javascript:void(0);" onclick="loadPage('Dashboard/manDash.html', this)" aria-label="Home"><i class='bx bx-home icon'></i></a>
-            <a href="javascript:void(0);" onclick="loadPage('Tenant_Profile/tProfile.php', this)" aria-label="Profile"><i class='bx bx-user icon'></i></a>
+            <a href="javascript:void(0);" onclick="loadPage('Tenant_Information/tenant_info.html', this)" aria-label="Profile"><i class='bx bx-user icon'></i></a>
             <a href="javascript:void(0);" onclick="loadPage('ttPayments.html', this)" aria-label="Payments"><i class='bx bx-wallet icon'></i></a>
-            <a href="javascript:void(0);" onclick="loadPage('Tenant_Maintenance/maintenance.html', this)" aria-label="Maintenance"><i class='bx bx-wrench icon'></i></a>
+            <a href="javascript:void(0);" onclick="loadPage('Tenant_Maintenance/tenant_maintenance.html', this)" aria-label="Maintenance"><i class='bx bx-wrench icon'></i></a>
             <a href="javascript:void(0);" onclick="loadPage('Tenant_Notification/notif.html', this)" aria-label="Notifications">
                 <i class='bx bx-bell icon'></i>
                 <span class="notification-badge">5</span> <!-- Number of notifications -->
             </a>
-            <a href="javascript:void(0);" onclick="loadPage('../ADVERTISEMENT/contact-us.html', this)" aria-label="About Us"><i class='bx bx-phone icon'></i></a>
+            <a href="../ADVERTISEMENT/home.html" ><i class="bx bxs-briefcase icon"></i></a>
             <a href="Back-End/logout.php" aria-label="Logout"><i class='bx bx-log-out icon'></i></a>
         </nav>        
 
