--- a/ADVERTISEMENT/index.html
+++ b/ADVERTISEMENT/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=1.5">
     <script src="../imported_links.js" defer></script>
 </head>
 <body>
@@ -18,7 +18,13 @@
                         Enjoy a relaxing stay in our thoughtfully designed rooms, complemented by
                         top-notch amenities and a warm, inviting atmosphere.
                     </p>
-                    <a href="rooms.html" class="inquire-button" id="login-link"> <i class='bx bxs-bookmark'></i> INQUIRE ROOM NOW!</a>
+                    <div class="navlink">
+                        <a href="rooms.php" class="inquire-button" id="login-link"> <i class='bx bxs-bookmark'></i> INQUIRE ROOM NOW!</a>
+                        <a href="../USER PAGE/login.php" class="login-button" id="login-link" target="_parent"> 
+                            <i class='bx bxs-pen'></i> DONE WITH BOOKING? <span>Click Here!</span> 
+                        </a>
+                        
+                    </div>
                 </div>
                 <div class="right"><img src="images/BH_PIC.png" alt=""></div>
             </div>
