--- a/ADVERTISEMENT/aminities.html
+++ b/ADVERTISEMENT/aminities.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=1.0">
     <link rel="stylesheet" href="resetter/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,6 +51,36 @@
                         Water Supply <br>
                         Electricity Backup <br>
                         Parking Facilities</p>
+                </div>
+                <div class="aminities-info">
+                    <img src="images/credit-card.png" alt="">
+                    <h1>Convenience Amenities:</h1>
+                    <span><p> ATM on Premises <br>
+                        Vending Machines <br>
+                        Postal Services</p></span>
+                </div>
+                <div class="aminities-info">
+                    <img src="images/building.png" alt="">
+                    <h1>Recreational Amenities:</h1>
+                    <p style="padding-bottom: 85px;"> Fitness Center or Gym <br>
+                        Garden or Outdoor Spaces <br>
+                        Game Room <br>
+                        Swimming Pool</p>
+                </div>
+                <div class="aminities-info">
+                    <img src="images/credit-card.png" alt="">
+                    <h1>Convenience Amenities:</h1>
+                    <span><p> ATM on Premises <br>
+                        Vending Machines <br>
+                        Postal Services</p></span>
+                </div>
+                <div class="aminities-info">
+                    <img src="images/building.png" alt="">
+                    <h1>Recreational Amenities:</h1>
+                    <p style="padding-bottom: 85px;"> Fitness Center or Gym <br>
+                        Garden or Outdoor Spaces <br>
+                        Game Room <br>
+                        Swimming Pool</p>
                 </div>
                 <div class="aminities-info">
                     <img src="images/credit-card.png" alt="">
