--- a/ADVERTISEMENT/home.html
+++ b/ADVERTISEMENT/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css?v=1.6">
+    <link rel="stylesheet" href="style.css?v=1.1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <section id="wrapper">
+    <section id="wrappers">
             <div class="header">
                 <div class="logo">
                     <img src="images/BHMS LOGO.png" alt="LOGO">
@@ -21,7 +21,7 @@
                 <input type="checkbox" id="burger-toggle">
                 <label for="burger-toggle" class="burger-icon"><i class='bx bx-menu'></i></label>
                 <div class="navigator">
-                    <a href="javascript:void(0);" onclick="loadPage('index.html', this)" aria-label="Home">HOME</a>
+                    <a href="javascript:void(0);" onclick="loadPage('index.php', this)" aria-label="Home">HOME</a>
                     <a href="javascript:void(0);" onclick="loadPage('rooms.php', this)" aria-label="Home">ROOMS</a>
                     <a href="javascript:void(0);" onclick="loadPage('aminities.html', this)" aria-label="Profile">AMINITIES</a>
                     <a href="javascript:void(0);" onclick="loadPage('services.html', this)" aria-label="Payments">SERVICES</a>
@@ -37,24 +37,17 @@
     </section>
 
     <script>
-        // Function to load the target page into the iframe and update active link
         function loadPage(page, linkElement) {
             var iframe = document.getElementById("content-iframe");
             iframe.src = page;
-            
-            // Remove 'active' class from all links
             var navLinks = document.querySelectorAll('.navigator a');
             navLinks.forEach(link => link.classList.remove('active'));
-            
-            // Add 'active' class to the clicked link
             linkElement.classList.add('active');
         }
-
-        // Set the initial page and active link on window load
         window.onload = function() {
             var firstNavLink = document.querySelector('.navigator a');
             if (firstNavLink) {
-                loadPage('index.html', firstNavLink); // Ensure the first page is loaded initially
+                loadPage('index.php', firstNavLink); 
             }
         };
 
