--- a/MANAGEMENT/Dashboard/manDash.html
+++ b/MANAGEMENT/Dashboard/manDash.html
@@ -6,7 +6,7 @@
     <title>Management Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="../../imported_links.js" defer></script>
-    <link rel="stylesheet" href="manDash.css">
+    <link rel="stylesheet" href="manDash.css?v=1.10">
 </head>
 <body>
     
